<?xml version="1.0" encoding="utf-8"?><!--
  ~ Licensed to the Apache Software Foundation (ASF) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The ASF licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Apache NiFi Site-to-Site Demo</string>
    <string name="edit_message">Enter a message</string>
    <string name="edit_message_default">Hello NiFi, I\'m Android</string>
    <string name="button_send">Send</string>
    <string name="button_schedule">Schedule</string>
    <string name="button_cancel">Cancel Alarms</string>
    <string name="schedule_confirm">Confirm</string>
    <string name="schedule_cancel">Cancel</string>
    <string name="alarm_interval_prompt">Alarm Interval: </string>
    <string name="interval_units_prompt">Units</string>
    <string name="default_seconds" translatable="false">60</string>
    <string name="preferences">Preferences</string>
    <string-array name="interval_units">
        <item>MS</item>
        <item>S</item>
        <item>M</item>
        <item>H</item>
    </string-array>
    <string-array name="client_types">
        <item>HTTP</item>
        <item>RAW</item>
    </string-array>

    <string-array name="client_types_values" translatable="false">
        <item>HTTP</item>
        <item>RAW</item>
    </string-array>
</resources>