<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The ASF licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/sendResults"
        android:layout_weight="1"
        android:maxLines="100"
        android:minLines="1"
        android:background="@color/colorBackground"
        android:gravity="bottom"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"/>

    <EditText android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:text="@string/edit_message_default" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle">

        <Button
            android:text="@string/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:onClick="cancelAlarms"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:text="@string/button_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:onClick="schedule"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_send"
            android:id="@+id/button"
            android:layout_weight="1"
            android:onClick="sendMessage"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>